# intentful

./: .gitignore  .~lock.README.md#  .~lock.intentful_plan.md#  CONTRIBUTING.md  LICENSE  README.md  intentful_plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  USAGE.md
examples/: demo_app.py  demo_auto.py
intentful/: __init__.py
intentful/backends/: __init__.py  anthropic.py  local.py  openai.py
intentful/cli/: __init__.py  main.py
intentful/conversation/: __init__.py  fields.py  resolver.py  session.py  store.py
intentful/core/: __init__.py  context.py  decorator.py  registry.py  schemas.py
intentful/execution/: __init__.py  auditor.py  confirmer.py  rollback.py
intentful/integrations/: __init__.py  auto.py  fastapi.py  oracle.py  sqlalchemy.py
intentful/routing/: __init__.py  lookup.py  middleware.py  resolver.py  smart_validation.py  validator.py
intentful/scanner/: __init__.py  openapi.py  registry_builder.py
intentful/server/: __init__.py  app.py  executor.py  routes.py
intentful/widget/: __init__.py  intentful.js
tests/: conftest.py  test_auditor.py  test_auto.py  test_cli.py  test_confirmer.py  test_conversation.py  test_core.py  test_executor.py  test_integration.py  test_lookup.py  test_middleware.py  test_resolver.py  test_scanner.py  test_schemas.py  test_server.py  test_smart_validation.py  test_validator.py
