[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentful"
version = "1.0.0"
description = "AI agent that connects to any backend via OpenAPI — understand intent, not just requests."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "elit" },
]
keywords = ["agent", "intent", "llm", "api", "natural-language", "openapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
intentful = "intentful.cli.main:cli"

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
ollama = []
all = ["anthropic>=0.18.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21,<1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/elit/intentful"
Repository = "https://github.com/elit/intentful"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
